Fixed text length when too long, and list scrolls when too long

--- a/style.css
+++ b/style.css
@@ -61,7 +61,14 @@ body {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    overflow: hidden
+    overflow: auto;
+    height: 260px;
+
+    -ms-overflow-style: none;
+}
+
+#task-list ul::-webkit-scrollbar {
+    display: none;
 }
 
 .list-item {
@@ -79,6 +86,7 @@ body {
 
 .list-item-text {
     display: inline-block;
+    word-wrap: break-word;
     font-weight: 600;
 }
 
